@@ -1,3 +1,2 @@
 #!/bin/bash
-cd /data/
-java -Xverify:none -XX:+HeapDumpOnOutOfMemoryError -Dtio.default.read.buffer.size=512 -XX:HeapDumpPath=./java-im-server-pid.hprof -cp ./:./lib/* org.example.ImServer
+java -XX:+HeapDumpOnOutOfMemoryError -Dtio.default.read.buffer.size=512 -XX:HeapDumpPath=./java-im-server-pid.hprof -Dglobal.config.path=/data -jar im-server-jar-with-dependencies.jar
